feat(thesis): daily update

--- a/content/audio_over_ip_systems.tex
+++ b/content/audio_over_ip_systems.tex
@@ -1034,6 +1034,8 @@ A Dante eszközök támogatják a vegyes firmware verziókat, lehetővé téve a
 verziók együttműködését. Ezt a funkciót rendszeres automatizált regressziós tesztelés 
 biztosítja, amely a különböző firmware verziók közötti kompatibilitást ellenőrzi.
 %----------------------------------------------------------------------------
+\newpage
+%----------------------------------------------------------------------------
 \subsection{Chipek}
 %----------------------------------------------------------------------------
 A Dante hálózatok különféle chipekkel építhetők fel. Az Audinate széles választékot 
