feat(thesis): daily update

--- a/content/further_development.tex
+++ b/content/further_development.tex
@@ -113,14 +113,60 @@ menthetjük, majd további feldolgozásra továbbíthatjuk.
     \caption{TASCAM DA-6400 multitrack recorder}
     \label{fig:tascam_da_6400}
 \end{figure}
-%----------------------------------------------------------------------------
-
-%----------------------------------------------------------------------------
+%---------------------------------------------------------------------------- 
 \subsubsection{Allen \& Heath ME Personal Mixing System} % Előadóknak egyéni keverési lehetőség
 %----------------------------------------------------------------------------
-% ME-U + M-DANTE kártya + ME-500
-
-
+Az Allen \& Heath ME Personal Mixing System egy korszerű és kivételesen
+rugalmas megoldás az előadók számára, amely lehetővé teszi az egyéni
+monitorkeverést. Ez különösen fontos olyan helyzetekben,
+ahol a színpadon több zenész dolgozik együtt, és mindegyikük
+egyedi monitor igényekkel rendelkezik, ezek most már általában fülmonitorok.
+A rendszer egyszerre biztosít professzionális hangminőséget és egyszerű kezelhetőséget, amely által az
+előadók gyorsan és könnyen testre szabhatják a saját keverési beállításaikat
+annak érdekében, hogy a legjobban hallják önmagukat és a többi zenészt.
+Az Allen \& Heath ME rendszer három fő komponensből áll: a ME-U 
+disztribúciós hubból, a ME-500 személyi keverőegységből, valamint a 
+Dante hálózati kompatibilitást biztosító M-DANTE kártyából.
+A ME-U egy 10 portos disztribúciós hub, amely lehetővé teszi több 
+ME-500 keverőegység egyszerű és gyors csatlakoztatását. A rendszer egyik
+kiemelkedő előnye, hogy minden csatlakoztatott eszköz egyetlen CAT5 
+Ethernet kábelen keresztül kapja a tápellátást és az audiojelet is, ami
+jelentősen egyszerűsíti a telepítést és az üzemeltetést. A ME-U támogatja 
+a különböző digitális audió hálózati formátumokat, többek között a 
+Dante protokollt is, amelyet az M-DANTE kártya biztosít.
+Az M-DANTE kártya lehetővé teszi, hogy a ME rendszer integrálódjon 
+a Dante alapú hálózati audió rendszerekkel.
+%----------------------------------------------------------------------------
+\begin{figure}[H]
+    \centering
+    \begin{minipage}{0.45\textwidth}
+        \centering
+        \includegraphics[width=50mm, keepaspectratio]{figures/me_u.jpg}
+        \caption{A\&H ME-U disztribúciós hub}\label{fig:me_u}
+    \end{minipage}\hfill
+    \begin{minipage}{0.45\textwidth}
+        \centering
+        \includegraphics[width=50mm, keepaspectratio]{figures/m_dante.jpg}
+        \caption{A\&H M-DANTE kártya}\label{fig:m_dante}
+    \end{minipage}
+\end{figure}
+%----------------------------------------------------------------------------
+A ME-500 személyi keverőegység az előadók számára készült,
+lehetővé téve, hogy egyéni igényeik szerint keverhessék a monitorozott
+hangsávokat. Az egység egyszerű és intuitív felhasználói felülettel 
+rendelkezik, amelyet úgy terveztek, hogy a zenészek, akár minimális
+technikai tudással is, gyorsan megtanulhassák a használatát. 
+A rendszer további előnye, hogy könnyedén integrálható 
+már meglévő audió hálózatokba, ami széleskörű kompatibilitást biztosít.
+%----------------------------------------------------------------------------
+\begin
+    {figure}[H]
+    \centering
+    \includegraphics[width=65mm, keepaspectratio]{figures/me_500.jpg}
+    \caption{Allen \& Heath ME-500 személyi keverőegység}
+    \label{fig:martin_audio_wpl}
+\end{figure}
+%----------------------------------------------------------------------------
 %----------------------------------------------------------------------------
 \subsubsection{Martin Audio WPL LineArray rendszer} % Nagyobb rendezvényekre
 %----------------------------------------------------------------------------
@@ -140,7 +186,6 @@ bővítése előtt alaposan mérlegelni kell, megtérül-e a befektetés hosszab
     \caption{Martin Audio WPL LineArray modul}
     \label{fig:martin_audio_wpl}
 \end{figure}
-%----------------------------------------------------------------------------
 %----------------------------------------------------------------------------
 \subsection{Bővítés nagyobb interfészre és keverőpultra}
 %----------------------------------------------------------------------------
