feat(thesis): daily update

--- a/content/abstract.tex
+++ b/content/abstract.tex
@@ -10,6 +10,63 @@
 % TODO: Távolítsd el a megjegyzést, ha mégis szeretnéd, hogy bekerüljön a tartalomjegyzékbe
 %\addcontentsline{toc}{chapter}{Kivonat}
 
+Szakdolgozatom célja egy élőzenei produkció hangrendszerének megtervezése, 
+kiépítése, optimalizálása és beüzemelése, mely a Dante protokollra 
+építkezik. Az Audio over IP rendszerek, különösen a Dante hálózatok, 
+lehetőséget nyújtanak a hagyományos analóg hangrendszerekhez 
+képes gyorsabb, megbízhatóbb és skálázhatóbb megoldások alkalmazására. 
+A Dante protokoll technológiai előnyei közé tartozik az alacsony 
+késleltetés, a magas szintű jelminőség és a hálózati redundancia 
+biztosítása, ami különösen fontos az élő produkciók során.
+
+Az 1. fejezet bevezeti a szakdolgozat témáját és eredetét,
+miért is ezt a témát választotta a szerző.
+
+A 2. fejezet az alapvető hangtechnikai fogalmakat és rendszereket 
+mutatja be, beleértve az analóg és digitális hangrendszerek 
+közötti eltéréseket. Ismerteti a digitális audiojelek 
+feldolgozásának alapjait,kitér a hangerősségre, a hangnyomásszintre, valamint a 
+különböző hangforrások, mint a pontsugárzók és a LineArray 
+rendszerek közötti eltérésekre. 
+
+A 3. fejezet célja, hogy alaposan bemutassa a digitális audió 
+rendszerek alapjait és a Dante protokoll technikai részleteit. 
+Ebben a részben többek között bemutatásra kerülnek az IP-címek kiosztásának módszerei, 
+a hálózati topológiák kialakítása, 
+valamint a különböző hálózati eszközök, mint például switchek szerepei.
+
+A 4. fejezet a tervezési és telepítési folyamatot tárgyalja, 
+különös figyelmet szentelve a felhasznált eszközöknek, 
+mint például a hangprocesszorok, végerősítők és 
+hangszórók. A tervezési szakasz kulcsfontosságú eleme a
+rendszer méretezése és konfigurálása, amely figyelembe 
+veszi a produkció követelményeit, mint például a helyszín 
+méretét, a közönség elrendezését és az előadás 
+specifikus igényeit. Ezen felül bemutatom a Dante 
+Controller szoftver használatát, amely lehetővé teszi a 
+hálózati eszközök konfigurálását és a forgalom 
+monitorozását. 
+A telepítés során a Dante-alapú hálózat  kiépítése mellett kiemelten
+foglalkozom a hangminőség optimalizálásával. A valós környezetben 
+végzett tesztelés során a rendszer megbízhatóságát és 
+rugalmasságát is értékelem.
+
+Az 5. fejezet a telepítés utáni üzemeltetési tapasztalatokkal 
+foglalkozik. Részletesen bemutatom a rendszer integrálását a 
+TéDé Rendezvények egy élőzenei produkcióján, ahol 
+valós időben teszteltem a Dante hálózat teljesítményét. 
+Itt tárgyalom a hangrendszer és a vezérlőrendszerek 
+integrációjának fontosságát, valamint az előadás közben 
+tapasztalt akusztikai és hálózati kihívások kezelését. 
+Az eredmények alapján további fejlesztési lehetőségeket 
+javaslok, melyek még tovább növelhetik a rendszer teljesítményét és rugalmasságát.
+
+Az általam bemutatott rendszer lényeges előnyöket nyújt egy analóg 
+hangrendszerekkel szemben.
+Az üzemeltetési tapasztalatok azt igazolják, hogy 
+az Audio over IP technológiák, különösen a Dante, 
+stabil, skálázható és megbízható megoldást 
+kínál a modern élőzenei produkciók számára.
 
 
 \vfill
@@ -22,6 +79,69 @@
 \chapter*{Abstract}
 % TODO: Távolítsd el a megjegyzést, ha mégis szeretnéd, hogy bekerüljön a tartalomjegyzékbe
 %\addcontentsline{toc}{chapter}{Abstract}
+
+The aim of my thesis is to design, build, optimize, and 
+commission an audio system for a live music production, 
+which is based on the Dante protocol. Audio over IP 
+systems, particularly Dante networks, provide faster, 
+more reliable, and scalable solutions compared to 
+traditional analog sound systems. The technological 
+advantages of the Dante protocol include low latency, 
+high signal quality, and network redundancy, which are 
+particularly important during live productions.
+
+Chapter 1 introduces the topic of the thesis and its 
+origin, explaining why the author chose this subject.
+
+Chapter 2 presents fundamental audio engineering 
+concepts and systems, highlighting the differences 
+between analog and digital sound systems. It discusses 
+the basics of processing digital audio signals, 
+addresses volume levels, sound pressure levels, and 
+differences between various sound sources, such as 
+point sources and Line Array systems.
+
+Chapter 3 aims to thoroughly present the foundations 
+of digital audio systems and the technical details of 
+the Dante protocol. This section includes a discussion 
+on methods for assigning IP addresses, the design of 
+network topologies, and the roles of various network 
+devices, such as switches.
+
+Chapter 4 covers the design and installation process, 
+paying special attention to the utilized equipment, 
+including audio processors, power amplifiers, and 
+speakers. A crucial element of the design phase is 
+the sizing and configuration of the system, which 
+takes into account production requirements, such as 
+the venue size, audience layout, and specific needs 
+of the performance. Additionally, I present the use of 
+the Dante Controller software, which allows for the 
+configuration of network devices and traffic monitoring. 
+During the installation, alongside building the Dante- 
+based network, I focus on optimizing sound quality. 
+In tests conducted in real environments, I also assess 
+the reliability and flexibility of the system.
+
+Chapter 5 addresses the operational experiences post- 
+installation. I provide a detailed account of the 
+integration of the system into a live music production 
+by TéDé Rendezvények, where I tested the performance 
+of the Dante network in real-time. This section discusses 
+the importance of the integration between the sound 
+system and control systems, as well as the management 
+of acoustic and network challenges encountered during 
+the performance. Based on the results, I propose further 
+development opportunities that could enhance the 
+performance and flexibility of the system.
+
+The system I presented offers significant advantages 
+over analog sound systems. The operational experiences 
+demonstrate that Audio over IP technologies, particularly 
+Dante, provide a stable, scalable, and reliable solution 
+for modern live music productions.
+
+
 
 
 
