--- a/content/system_desing.tex
+++ b/content/system_desing.tex
@@ -16,7 +16,7 @@ Az új rendszer tervezésekor a következő szempontokat kellett szem előtt tar
 	\item Megbízható és kiforrott technológiára épüljön.
 \end{itemize}
 %----------------------------------------------------------------------------
-\section{Rendszerterv}
+\section{Rendszerterv és kivitelezés}
 %----------------------------------------------------------------------------
 A cég alapítása óta Martin Audio termékeket használ, a régi W8LM rendszerrel nagyon elégedettek voltunk, 
 ebből kifolyólag a választás márka szempontjából nem is volt kérdéses. A Martin új rendszerei a Wavefront Precision sorozat szériás
