feat(thesis): daily update

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -44,119 +44,119 @@
   title  = {Display v2.3 USER GUIDE v1.5},
   author = {Martin Audio},
   url    = {https://martin-audio.com/downloads/userguides/Display-2.3-User-Guide-v1.5.pdf},
-  note   = {Accessed on: 2024.01.04.}
+  note   = {Megnyitva: 2024.01.04.}
 }
 
 @manual{WPCUSERGUIDE,
   title  = {WPC User Guide},
   author = {Martin Audio},
   url    = {https://martin-audio.com/downloads/userguides/WPC-User-Guide.pdf},
-  note   = {Accessed on: 2024.01.04.}
+  note   = {Megnyitva: 2024.01.04.}
 }
 
 @manual{WPMUSERGUIDE,
   title  = {WPM User Guide},
   author = {Martin Audio},
   url    = {https://martin-audio.com/downloads/userguides/WPM-User-Guide.pdf},
-  note   = {Accessed on: 2024.01.04.}
+  note   = {Megnyitva: 2024.01.04.}
 }
 
 @manual{SXSUBWOOFERUSERGUIDE,
   title  = {SX Subwoofer User Guide},
   author = {Martin Audio},
   url    = {https://martin-audio.com/downloads/userguides/SX-Subwoofer-User-Guide.pdf},
-  note   = {Accessed on: 2024.01.04.}
+  note   = {Megnyitva: 2024.01.04.}
 }
 
 @manual{VUNETUSERGUIDE,
   title  = {VU-NET 2.2 User Guide v4.7},
   author = {Martin Audio},
   url    = {https://martin-audio.com/downloads/userguides/VU-NET%202.2%20User%20Guide%20v4.7.pdf},
-  note   = {Accessed on: 2024.01.04.}
+  note   = {Megnyitva: 2024.01.04.}
 }
 
 @manual{IKONAMPUSEGUIDE,
   author = {Martin Audio},
   title = {iKON Amplifier User Guide},
   url = {https://martin-audio.com/downloads/userguides/iKON-Amplifier-User%20Guide.pdf},
-  note   = {Accessed on: 2024.01.04.}
+  note   = {Megnyitva: 2024.01.04.}
 }
 
 @misc{MERLINVANVEEN,
   author = {Merlijn van Veen},
   title = {Calculators},
   url = {https://www.merlijnvanveen.nl/en/calculators},
-  note = {Accessed on: 2024.01.08.}
+  note = {Megnyitva: 2024.01.08.}
 }
 
 @misc{MARTINSUBCALCULATOR,
   author = {Martin Audio},
   title = {Subwoofer Calculator},
   url = {https://martin-audio.com/support/subwoofer-calculator},
-  note = {Accessed on: 2024.01.08.}}
+  note = {Megnyitva: 2024.01.08.}}
 }
 
 @misc{AHSQ,
   author = {Allen \& Heath},
   title = {SQ Series},
   url = {https://www.allen-heath.com/hardware/sq},
-  note = {Accessed on: 2024.01.08.}}
+  note = {Megnyitva: 2024.01.08.}}
 }
 
 @misc{APPLICATIONDIAGRAMSFORDANTESYSTEMS,
   author = {Audinate},
   title = {Application Diagrams for Dante Systems},
   url = {https://my.audinate.com/sites/default/files/Live_Performance_Touring_Venue_Audio_System_Diagrams_Dante.pdf},
-  note = {Accessed on: 2024.02.25.}
+  note = {Megnyitva: 2024.02.25.}
 }
 
 @misc{AUDINATEHISTORY,
   author = {Audinate},
   title = {Audinate History},
   url = {https://www.audinate.com/company/history},
-  note = {Accessed on: 2024.09.11.}
+  note = {Megnyitva: 2024.09.11.}
 }
 
 @misc {PULSECODEMODULATION,
   author = {Shah Nurun Nabi},
   title = {Pulse Code Modulation (PCM)},
   url = {https://www.youtube.com/watch?app=desktop&v=k7L52z-IQmQ},
-  note = {Accessed on: 2024.09.16.}
+  note = {Megnyitva: 2024.09.16.}
 }
 
 @misc {DECIBELSCALE,
   author = {Vadalarm},
   title = {Decibel Scale},
   url = {https://www.vadalarm.hu/img/blog/decibel-ertek.jpg},
-  note = {Accessed on: 2024.09.16.}
+  note = {Megnyitva: 2024.09.16.}
 }
 
 @misc {DBWEIGHTS,
   author = {NTI Audio},
   title = {dB Weights},
   url = {https://www.nti-audio.com/Portals/0/pic/en/Sound-Pressure-Level-Frequency-Weightings.jpg},
-  note = {Accessed on: 2024.09.16.}
+  note = {Megnyitva: 2024.09.16.}
 }
 
 @misc {TCPUDPPICS,
   author = {Trueconf},
   title = {TCP and UDP},
   url = {https://trueconf.com/blog/wp-content/uploads/2022/01/packet-formats-1-690x294.png},
-  note = {Accessed on: 2024.09.17.}
+  note = {Megnyitva: 2024.09.17.}
 }
 
 @misc {UDP,
   author = {GeeksforGeeks},
   title = {UDP},
   url = {https://www.geeksforgeeks.org/user-datagram-protocol-udp/},
-  note = {Accessed on: 2024.09.17.}
+  note = {Megnyitva: 2024.09.17.}
 }
 
 @misc {DSPARRAYS,
   author = {Martin Audio},
   title = {DSP Arrays},
   url = {https://static.martin-audio.com/downloads/brochures/wpl-brochure.pdf},
-  note = {Accessed on: 2024.09.17.}
+  note = {Megnyitva: 2024.09.17.}
 }
 
 
