feat(thesis): daily update

--- a/include/project.tex
+++ b/include/project.tex
@@ -5,7 +5,7 @@
 \clearpage
 
 % PDF formátumú leírás esetén
-\includepdf{figures/start.pdf}
+%\includepdf{figures/start.pdf}
 
 % Képfájlokhoz
-% \includegraphics*[width=\linewidth]{figures/kiiras.png}
+\includegraphics*[width=\linewidth]{figures/start.png}
